# lineoptim

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
components/: line.py  motor.py
examples/: example_line.json  high_level_example.py  simple_example.py  three_phase_line.py
lineoptim/: __init__.py  main.py  utils.py
lineoptim/components/: __init__.py  line.py  motor.py  network.py
lineoptim/plot/: __init__.py  accessor.py  data.py  graph.py  plotter.py
lineoptim/resources/: example_line.json  line_structure.json
